fixed overlap issue between dropdown menu and background on home page

--- a/assets/section-hero-banner.css
+++ b/assets/section-hero-banner.css
@@ -68,13 +68,15 @@
   align-items: center;
   width: max-content;
   margin: 0 auto;
+  line-height: normal;
 } 
 
 .nav-item {
   display: flex;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   padding: 0 2rem;
-  padding-top: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   background: white;
   color: black;
   font-family: "Neue Montreal Bold";
@@ -87,7 +89,7 @@
 
 .nav-item--child {
   margin-bottom: 1%;
-  font-size: 2rem;
+  font-size: 3rem;
   mix-blend-mode: unset;
   color: white;
   background-color: transparent;
@@ -97,15 +99,15 @@
   margin-bottom: 2rem;
 }
 
-@media only screen and (max-width: 749px) {
+@media only screen and (max-width: 990px) {
   .nav-item {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 3rem;
     
     /* line-height: calc(1.9 + 0.8 / var(--font-body-scale)); */
   }
-}
 
-/* .nav-item--child {
-  font-size: 2rem;
-} */
+  .nav-item--child {
+    margin-bottom: 1%;
+  }
+}
